# YAPS

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindEigen3.cmake
glad/: README.md
glad/include/glad/: glad.h
glad/src/: glad.c
manta-scenes/: plume.py
res/: Illumination.fs  Illumination.gs  Illumination.vs  Particle.fs  Particle.gs  Particle.vs  Quad.fs  Quad.vs  Sphere.fs  Sphere.vs
src/: Camera.cpp  Camera.h  ComputeColorsParameters.h  Framebuffer.cpp  Framebuffer.h  GL.cpp  GL.h  GLCUDA.h  GPUGrid.cu  GPUGrid.h  MainWindow.cpp  MainWindow.h  MainWindowGLWidget.cpp  MainWindowGLWidget.h  Normals.cpp  Normals.h  Particles.cpp  Particles.cu  Particles.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  SettingsHelper.h  SimpleTriMesh.cpp  SimpleTriMesh.h  TexQuad.cpp  TexQuad.h  Texture.cpp  Texture.cu  Texture.h  VectorHelper.h  main.cpp  read_particles.cpp  read_particles.h  sort_pixels.cu  sort_pixels.h
